Still Working on it

--- a/index.html
+++ b/index.html
@@ -13,10 +13,90 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
+  <link rel="stylesheet" href="styles/finalAssignment.css" />
+  <link rel="stylesheet" href="styles/main.css" />
   <!-- Stylesheets -->
 
 </head>
 <body>
+	<header role="banner">
+		<div class="row">
+			<div class="col-12">
+				<h1> Star Wars Characters</h1>
+				<p> Incomplete List</p>
+			</div>
+		</div>
+	</header>
+
+	<main role="main">
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/rey_square.png" alt="Rey from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Rey</h3>
+						<p>Protagonist, from Tatooine</p>
+				</div>
+			</div>	
+		</div>
+
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/finn_square.png" alt="Finn from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Finn</h3>
+						<p>Stom Trooper, befriends Ray</p>
+				</div>
+			</div>	
+		</div>
+
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/kylo_square.png" alt="Kylo from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Kylo</h3>
+						<p>Main villain, or is he?</p>
+				</div>
+			</div>	
+		</div>
+
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/poe_square.png" alt="Poe from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Poe</h3>
+						<p>Neutral Pilot</p>
+				</div>
+			</div>	
+		</div>
+
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/chewbacca_square.png" alt="Chewbacca from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Chewbacca</h3>
+						<p>A great first mate</p>
+				</div>
+			</div>	
+		</div>
+
+		<div class="row"> 
+			<div class="col-4">
+				<div class="card">
+					<img src="images/yoda_square.png" alt="Yoda from Star Wars" class="image-card"/>
+					<div class= "card-content">
+						<h3>Yoda</h3>
+						<p>Wise old Jedi master</p>
+				</div>
+			</div>	
+		</div>
+
+	
+	</main>
 
 </body>
 </html>
