fixed, almost done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 			</div>	
 		</div>
 
-		<div class="row"> 
 			<div class="col-4">
 				<div class="card">
 					<img src="images/finn_square.png" alt="Finn from Star Wars" class="image-card"/>
@@ -51,7 +50,6 @@
 			</div>	
 		</div>
 
-		<div class="row"> 
 			<div class="col-4">
 				<div class="card">
 					<img src="images/kylo_square.png" alt="Kylo from Star Wars" class="image-card"/>
@@ -62,7 +60,9 @@
 			</div>	
 		</div>
 
-		<div class="row"> 
+		</div>
+
+		<div class="row">
 			<div class="col-4">
 				<div class="card">
 					<img src="images/poe_square.png" alt="Poe from Star Wars" class="image-card"/>
@@ -95,7 +95,7 @@
 			</div>	
 		</div>
 
-	
+		</div>
 	</main>
 
 </body>
